updating files that were on gitlab

--- a/app/src/main/res/layout/activity_loja.xml
+++ b/app/src/main/res/layout/activity_loja.xml
@@ -38,21 +38,14 @@
         <RelativeLayout
                 android:layout_weight="2"
                 android:layout_width="match_parent"
-                android:layout_height="450dp"
-
-                >
+                android:layout_height="450dp">
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-
-
-            >
+                    android:layout_height="match_parent">
 
             </androidx.recyclerview.widget.RecyclerView>
-
 
         </RelativeLayout>
 
@@ -62,7 +55,6 @@
                 android:layout_weight="1"
                 android:background="@color/primaryDarkColor"
         >
-
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -84,7 +76,7 @@
                         android:textSize="20sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/totalCredit"
+                        android:id="@+id/tv_saldo"
                         android:textAlignment="center"
                         android:focusable="true"
                         android:textStyle="bold"
