--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -91,7 +91,7 @@ cardview:cardCornerRadius="4dp"
                 android:layout_gravity="bottom">
 
             <Button
-                    android:id="@+id/buyBtn"
+                    android:id="@+id/btn_comprarLivro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/primaryLightColor"
